--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .js,.vue",
+    "lint": "eslint . --ext .ts,.vue",
     "format": "prettier --write ."
   },
   "dependencies": {
-    "vue": "^3.2.45",
     "ant-design-vue": "^3.2.15",
     "axios": "^1.2.0",
     "mockjs": "^1.1.0",
     "pinia": "^2.0.28",
+    "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4.0.0",
     "eslint": "^8.28.0",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "vite": "^4.0.0",
+    "typescript": "^5.0.0"
   }
 }
