--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@unocss/preset-attributify": "^66.2.3",
+    "@unocss/preset-uno": "^66.2.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "eslint": "^8.28.0",
     "prettier": "^2.8.0",
-    "vite": "^4.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "unocss": "^66.2.3",
+    "vite": "^4.0.0"
   }
 }
